Hotfix for gap between fixed header and html body top.

--- a/resources/assets/react/header/header.css
+++ b/resources/assets/react/header/header.css
@@ -168,7 +168,7 @@
  * layout
  */
 html {
-  margin-top: 129px;
+  margin-top: 82px;
   font-size: 18px;
   /* Mobile Devices for Mice */
   /* Landscape phones and down */
